# pg-migration-tool

./: .dockerignore  .gitignore  Dockerfile  Pipfile  README.md  database_validation.sh  flake.nix  pyproject.toml
pg-migration-tool/: config.example.yaml  main.py
pg_migration_tool/: config.example.yaml  main.py  select.tcss
